picture updated with link

--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -3,6 +3,10 @@
     <title> WHO I AM </title>
 </head>
 <body>
-    
+    <div>
+        <a href = "https://github.com/Ayesha-WEB-DEV"><img src = "./imagess/picture.png" alt = "GIT HUB ACCOUNT" style = "width: 30%"> </a>
+        
+    </div>
+
 </body>
 </html>
