use of head tag

--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -4,8 +4,11 @@
 </head>
 <body>
     <div>
+        <h2> <b> PERSONAL INFORMATION </b></h2>
         <a href = "https://github.com/Ayesha-WEB-DEV"><img src = "./imagess/picture.png" alt = "GIT HUB ACCOUNT" style = "width: 30%"> </a>
-        
+        <h3> <b> My Name: </b></h3>
+        <p> Ayesha Islam Qadri </p>
+
     </div>
 
 </body>
