--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -4,10 +4,13 @@
 </head>
 <body>
     <div>
-        <h2> <b> PERSONAL INFORMATION </b></h2>
+        <h2>  PERSONAL INFORMATION </h2>
         <a href = "https://github.com/Ayesha-WEB-DEV"><img src = "./imagess/picture.png" alt = "GIT HUB ACCOUNT" style = "width: 30%"> </a>
-        <h3> <b> My Name: </b></h3>
+        <h3> My Name: </h3>
         <p> Ayesha Islam Qadri </p>
+        <h3> My Bio: </h3>
+        <p>My name is Ayesha. I am from <b> UNIVERSITY OF ENGINEERING AND TECHNOLOGY. </b>This is my second semester and I am python programmer. Also have knowledge about microsoft office. I am junior representative of IEEE society and also the general member of ASME. I am also a content creator.</p>
+        
 
     </div>
 
