--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -10,8 +10,10 @@
         <p> Ayesha Islam Qadri </p>
         <h3> My Bio: </h3>
         <p>My name is Ayesha. I am from <b> UNIVERSITY OF ENGINEERING AND TECHNOLOGY. </b>This is my second semester and I am python programmer. Also have knowledge about microsoft office. I am junior representative of IEEE society and also the general member of ASME. I am also a content creator.</p>
-        
-
+    </div>
+    <div>
+        <h2> Some more information about me: </h2>
+        <a href = "./DEVELOPER/education.html"> EDUCATION </a>
     </div>
 
 </body>
