--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <title> EDUCATION </title>
+</head>
+<body>
+    <div>
+        <img src = "./imagess/education.webp" alt = "edu info">
+        <h2> EDUCATIONAL JOURNEY </h2>
+
+    </div>
+    <div>
+        
+    </div>
+</body>
 </html>
