--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -6,10 +6,11 @@
     <div>
         <img src = "./imagess/education.webp" alt = "edu info">
         <h2> EDUCATIONAL JOURNEY </h2>
+        <p> My educational journey from my childhood to adult:</p>
 
     </div>
     <div>
-        
+
     </div>
 </body>
 </html>
