connection between pages through link

--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -7,10 +7,12 @@
         <img src = "./imagess/education.webp" alt = "edu info">
         <h2> EDUCATIONAL JOURNEY </h2>
         <p> My educational journey from my childhood to adult:</p>
-
+        <ol>
+            <li>
+                ::marker
+            </li>
+        </ol>
     </div>
     <div>
-
+        <a href = "./intro.html "> Home page </a>
     </div>
-</body>
-</html>
