--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -13,7 +13,7 @@
     </div>
     <div>
         <h2> Some more information about me: </h2>
-        <a href = "./DEVELOPER/education.html"> EDUCATION </a>
+        <a href = "./education.html"> EDUCATION </a>
     </div>
 
 </body>
