--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -9,10 +9,23 @@
         <p> My educational journey from my childhood to adult:</p>
         <ol>
             <li>
-                ::marker
+                Matriculation - Government Girls Higher Secondary School, Dev Samaj Road, Lahore.
+                <br/>
+                Scored = <b> 95% </b>
+            </li>
+            <li>
+                Intermediate - Punjab College of Science, Wahdaat Road , Lahore.
+                <br/>
+                Scored = <b> 94% </b>           
+            </li>
+            <li>
+                Bachelors in Computer Engineering - UET Lahore.
+                <br/>
+                CGPA 3.37 / 4.0 in first semester
             </li>
         </ol>
     </div>
     <div>
         <a href = "./intro.html "> Home page </a>
+        <a href = "./contact.html"> CONTACT </a>
     </div>
