addition of files

--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -14,7 +14,10 @@
     <div>
         <h2> Some more information about me: </h2>
         <a href = "./education.html"> EDUCATION </a>
+        <br/>
+        <a href = "./contact.html"> CONTACT </a>
+        <br/>
+        <a href = "experience.html"> SOMEONE'S EXPERIENCE </a>
     </div>
-
 </body>
 </html>
