--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -27,5 +27,11 @@
     </div>
     <div>
         <a href = "./intro.html "> Home page </a>
+        <br/>
         <a href = "./contact.html"> CONTACT </a>
+        <br/>
+        <a href = "./experience.html"> Experience </a>
+        <br/>
     </div>
+</body>
+</html>
