--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div>
-        <img src = "./imagess/education.webp" alt = "edu info">
+        <img src = "./imagess/education.webp" alt = "edu info" style = "width: 108%">
         <h2> EDUCATIONAL JOURNEY </h2>
         <p> My educational journey from my childhood to adult:</p>
         <ol>
@@ -28,7 +28,7 @@
     <div>
         <a href = "./intro.html "> Home page </a>
         <br/>
-        <a href = "./contact.html"> CONTACT </a>
+        <a href = "./contact.html"> Contact </a>
         <br/>
         <a href = "./experience.html"> Experience </a>
         <br/>
