--- a/DEVELOPER/contact.html
+++ b/DEVELOPER/contact.html
@@ -14,9 +14,12 @@
         <input type = "text">
         <br>
         <br>
+
     </div>
     <div>
-        
+        <a href = "./intro.html"> Home page </a>
+        <a href = "./education.html"> Education </a>
+        <a href = "experience.html"> Experience </a>
     </div>
 </body>
 </html>
