button and message box

--- a/DEVELOPER/contact.html
+++ b/DEVELOPER/contact.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div>
-        <img src = "./imagess/contact.jfif" alt = "contact me" style = "width: 80%">
+        <img src = "./imagess/contact.jfif" alt = "contact me">
         <h2> My Contact </h2>
         <label for = "Name"> Name: </label>
         <input type = "text">
@@ -14,12 +14,20 @@
         <input type = "text">
         <br>
         <br>
-
+        <textarea name = "message" cols = "30" rows = "10" placeholder = "Enter your message here."> TEXT BOX </textarea>
+        <br>
+        <br>
+        <button> Submit </button>
     </div>
     <div>
         <a href = "./intro.html"> Home page </a>
+        <br/>
         <a href = "./education.html"> Education </a>
+        <br/>
         <a href = "experience.html"> Experience </a>
     </div>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
