--- a/DEVELOPER/contact.html
+++ b/DEVELOPER/contact.html
@@ -14,7 +14,7 @@
         <input type = "text">
         <br>
         <br>
-        <textarea name = "message" cols = "30" rows = "10" placeholder = "Enter your message here."> TEXT BOX </textarea>
+        <textarea name = "message" cols = "30" rows = "10" placeholder = "Enter your message here."></textarea>
         <br>
         <br>
         <button> Submit </button>
