experience page modified

--- a/DEVELOPER/intro.html
+++ b/DEVELOPER/intro.html
@@ -5,7 +5,7 @@
 <body>
     <div>
         <h2>  PERSONAL INFORMATION </h2>
-        <a href = "https://github.com/Ayesha-WEB-DEV"><img src = "./imagess/picture.png" alt = "GIT HUB ACCOUNT" style = "width: 75%"> </a>
+        <a href = "https://github.com/Ayesha-WEB-DEV"><img src = "./imagess/picture.png" alt = "GIT HUB ACCOUNT"> </a>
         <h3> My Name: </h3>
         <p> Ayesha Islam Qadri </p>
         <h3> My Bio: </h3>
