--- a/DEVELOPER/education.html
+++ b/DEVELOPER/education.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div>
-        <img src = "./imagess/education.webp" alt = "edu info" style = "width: 108%">
+        <img src = "./imagess/education.webp" alt = "edu info">
         <h2> EDUCATIONAL JOURNEY </h2>
         <p> My educational journey from my childhood to adult:</p>
         <ol>
