--- a/DEVELOPER/experience.html
+++ b/DEVELOPER/experience.html
@@ -4,7 +4,30 @@
 </head>
 <body>
     <div>
-        
+        <img  src = "./imagess/experience.webp" alt = "Work Experience">
+    </div>
+    <div>
+        <h2> WORK EXPERIENCE: </h2>
+        <>
+            <li>
+                Developed various open-source CLI and web-based tools and published them on npmjs.com. These tools include a conversion CLI to convert your docx files to markdown, a geolocation CLI to get you the geolocation data of any IP address, and more.
+            </li>
+            <li>
+                Jr. Developer Advocate at Worwox Group of Agencies – Curated technical content, generated marketing strategies to promote Worwox products, assisted campaigns for Worwox clientele, and organsied & managed community events.
+            </li>
+            <li>
+                Major League Hacking Fellow – Developed several open-source projects from scratch ranging from developer tools to Machine Learning based applications. Also, won Hackathons globally and within my pod.
+            </li>
+            <li>
+                Technical Review Writer at TheDevCouple – Wrote technical product reviews for multi-million dollar IT companies that include but are not limited to Kinsta, WP Engine, IPInfo, Northstack, etc.
+            </li>
+            <li>
+                Google Developer Student Clubs – Accepted by Google to lead its student developer community at my university.
+            </li>
+            <li>
+                Microsoft Learn Student Ambassador – Delivered talks on REST APIs, Hackatoberfest, Web Development, etc.
+            </li>
+        </ul>
     </div>
 </body>
 </html>
