--- a/DEVELOPER/experience.html
+++ b/DEVELOPER/experience.html
@@ -29,5 +29,28 @@
             </li>
         </ul>
     </div>
+    <div>
+        <h2> Community Work: </h2>
+        <ul>
+            <li>Founder & Lead of Google Developer Student Clubs UET Chapter – Founded GDSC UET in 2019 and led the community for a year. Now serving as its Web development lead.</li>
+            <li>Delivered hands-on workshop on Git and GitHub to teach students about GitHub and how to use Git to do version controlling and host their code on GitHub.</li>
+            <li> Gave talks in 2019 and 2020 about the Hackatoberfest, how to contribute to open-source, and what are the benefits of building open-source products.</li>
+            <li> Delivered hands-on workshop on React.js to teach students how to build the frontend with this JavaScript library. </li>
+            <li> Spoke at DevFest'19 organized by Google Developers Group, Lahore chapter about what Google Developer Students Clubs are and what are we doing to make tech education accessible to everyone. </li>
+            <li> Invited by Mehran University of Engineering & Technology to speak about community development at their Google Developer Student Clubs info session. </li>
+            <li> Invited by ASME UET Chapter to be the instructor of their Web development forum. </li>
+        </ul>
+    </div>
+    <div>
+        <h2> Information </h2>
+        <a href = "./intro.html"> Home page </a>
+        <br>
+        <a href = "./contact.html"> Contact </a>
+        <br>
+        <a href = "education.html"> Education </a>
+    </div>
+    <br>
+    <br>
 </body>
 </html>
+         
